<resources>
    <string name="app_name">GestAcao</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_app">Olá, bem vinda!</string>
    <string name="title_activity_mapa">mapa</string>
    <string name="ajuda_proxima">Ajuda Próxima</string>
    <string name="tira_duvidas">Tire suas dúvidas</string>
    <string name="gestAi_descricao">GestAi - sua assistente na gestação</string>
    <string name="mensagem_mes_7">Oi, mamãe! Já consigo ouvir sua voz!</string>
    <string name="_7_meses">7 Meses</string>
    <string name="dica_input">Tire aqui a sua dúvida...</string>
    <string name="enviar">Enviar</string>
    <string name="title_chat">chat</string>
    <string name="btn_alimentacao">Alimentação</string>
    <string name="btn_inchaco">Inchaço</string>
    <string name="btn_enjoo">Enjoo</string>
    <string name="btn_pos_parto">Pós-parto</string>
    <string name="title_como_ajudar">Como posso ajudar?</string>
    <string name="hint_digite_aqui">Digite aqui</string>
    <string name="desc_botao_falar">Falar</string>
    <string name="desc_botao_enviar">Enviar</string>
    <string name="desc_botao_voltar">Botão de voltar</string>
    <string name="app_name_title">GestAI</string>
    <string name="btn_prenatal">Pré-natal</string>
    <string name="buscar">Buscar</string>
    <string name="toque_para_saber_mais">Toque para saber mais</string>
    <string name="textview">TextView</string>
    <string name="buscar_local">Buscar local...</string>
    <string name="posto_de_saude">Posto de Saúde</string>
    <string name="title_mapa">Mapa</string>

    <string name="home_module_nutrition">Comida</string>
    <string name="home_module_exams">Exames</string>
    <string name="home_module_body_changes">Seu corpo</string>
    <string name="home_module_birth">Parto</string>
</resources>